# tajawal-rust-api

./: Cargo.toml
src/: main.rs  state.rs  tjx_challenge.rs  tjx_checker.rs  tjx_cryper_all.rs  tjx_decoder.rs  tjx_decorder_cripted_coder.rs  tjx_finder.rs  tjx_main_forwarder_logic.rs  tjx_validate.rs  tjx_validate_decoder.rs  tjx_validate_forwaed_crypted.rs
src/acc/: mod.rs  tjx_cripter.rs  tjx_decripter.rs  tjx_forwarder_cripter.rs  tjx_forwarder_decripter.rs  tjx_main.rs  tjx_otp.rs  tjx_otp_validate_cripter.rs  tjx_otp_validate_decripter.rs
src/domain/: mfa.rs  mod.rs  session.rs  token.rs  user.rs
src/infra/: db.rs  mod.rs  supabase.rs
src/middleware/: admin.rs  auth.rs  rate_limit.rs
src/routes/: admin.rs  auth.rs  mod.rs
src/security/: config.rs  jwt.rs  mod.rs  password.rs  rate_limit.rs  risk.rs  totp.rs
target_tmp/: .rustc_info.json
target_tmp/debug/: rust.d
target_tmp/debug/.fingerprint/async-trait-3f0c00a5cc342d42/: lib-async_trait  lib-async_trait.json
target_tmp/debug/.fingerprint/atomic-waker-dba3b198f38f65ad/: lib-atomic_waker  lib-atomic_waker.json
target_tmp/debug/.fingerprint/autocfg-d00f33f8ba8ba37e/: lib-autocfg  lib-autocfg.json
target_tmp/debug/.fingerprint/axum-7cfbbd39d9df2c69/: lib-axum  lib-axum.json
target_tmp/debug/.fingerprint/axum-core-e25c947da999fcd2/: lib-axum_core  lib-axum_core.json
target_tmp/debug/.fingerprint/axum-extra-9ebdd25a2d38b078/: lib-axum_extra  lib-axum_extra.json
target_tmp/debug/.fingerprint/axum-extra-a00211a9f1db7572/: lib-axum_extra  lib-axum_extra.json
(+485 files in other folders)
