[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
dotenvy = "0.15"
jsonwebtoken = "9"
time = { version = "0.3", features = ["serde", "macros"] }
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
rand = "0.8"
rsa = { version = "0.9", features = ["pem", "sha2"] }
base64 = "0.21"
